--- a/index.html
+++ b/index.html
@@ -1,47 +1,171 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Xiangxingchen.GitHub.io : CHEN XIANG">
+	<head>
+		<meta charset="UTF-8">
+		<title>Fullpage</title>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.9/jquery.fullPage.css">
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.9/jquery.fullPage.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
+		<script type="text/javascript" src="js/section2.js"></script>
+	</head>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<body>
+		<div id="fullpage">
+			<div class="section section1">
+				<canvas id="canvas"></canvas>
+				<div class="top-nav">
+					<ul>
+						<li><a href="#page1">Home</a></li>
+						<li><a href="#page2">Team</a></li>
+						<li><a href="#page3">Contact</a></li>
+						<li><a href="#page4">Ability</a></li>
+					</ul>
+				</div>
+				<div class="top-name">
+					<h1>CHEN XIANG</h1>
+					<p>Live beautifully, dream passionately, love completely.
+					</p>
 
-    <title>Xiangxingchen.GitHub.io</title>
-  </head>
+					<a type="button" href="#page2">
+						<span class="link link-top"></span>
+						<span class="link link-bottom"></span>
+						<span class="link link-left"></span>
+						<span class="link link-right"></span>了解更多
+					</a>
+				</div>
+			</div>
+			<div class="section section2">
+				<h1>个人技能</h1>
+				<ul class="skill-ul">
+					<li class="skill-li li1">
+						<a href="#">
+							<div class="skill-item ">
+								<!--<img src="images/2.jpg" />-->
+								<span class="fa fa-html5 size-html5"></span>
+								<h2>html5</h2>
+								<p>description</p>
+							</div>
+						</a>
+						<a href="#">
+							<div class="skill-item">
+								<!--<img src="images/3.jpg" />-->
+								<span class="fa fa-css3 size-css3"></span>
+								<h2>css3</h2>
+								<p>description</p>
+							</div>
+						</a>
+						<a href="#">
+							<div class="skill-item">
+								<img src="images/5.jpg" />
+								<h2>javascript</h2>
+								<p>description</p>
+							</div>
+						</a>
+					</li>
+					<li class="skill-li li2">
+						<a href="#">
+							<div class="skill-item">
+								<h2>bootstrap</h2>
+								<p>description</p>
+							</div>
+						</a>
+						<a href="#">
+							<div class="skill-item">
+								<h2>angularJS</h2>
+								<p>description</p>
+							</div>
+						</a>
+						<a href="#">
+							<div class="skill-item">
+								<h2>node/gulp</h2>
+								<p>description</p>
+							</div>
+						</a>
+					</li>
+				</ul>
+				<ul class="tip">
+					<li class="tip-prev"><span class="fa fa-circle tip-left"></span></li>
+					<li class="tip-next"><span class="fa fa-circle-o tip-right"></span></li>
+				</ul>
+			</div>
+			<div class="section section3">
+				<div class="wrap">
+					<div class="btn-left"></div>
+					<ul class="project">
+						<li class="project-item item1">
+							<div class="row">
+								<div class="col-md-8">
+									<img src="images/1.jpg" />
+								</div>
+								<div class="col-md-4">
+									<h2><a href="#">项目一</a></h2>
+									<span class="fa fa-chevron-down"></span>
+									<p>项目简介</p>
+								</div>
+							</div>
+						</li>
+						<li class="project-item item2">
+							<div class="row">
+								<div class="col-md-7 col-md-offset-1">
+									<img src="images/3.jpg" />
+								</div>
+								<div class="col-md-4">
+									<h2><a href="#">项目二</a></h2>
+									<span class="fa fa-chevron-down"></span>
+									<p>项目简介</p>
+								</div>
+							</div>
+						</li>
+						<li class="project-item item3">
+							<div class="row">
+								<div class="col-md-8">
+									<img src="images/4.jpg" />
+								</div>
+								<div class="col-md-4">
+									<h2><a href="#">项目三</a></h2>
+									<span class="fa fa-chevron-down"></span>
+									<p>项目简介</p>
+								</div>
+							</div>
+						</li>
+					</ul>
+					<div class="btn-right"></div>
+				</div>
+			</div>
+			<div class="section section4">
 
-  <body>
+				<div class="dream"><a href="#"><span></span>为了理想的生活</a></div>
+				<ul class="row">
+					<li class="column">
+						<span class="fa fa-phone fa-5x"></span>
+						<p>模式描述 </p>
+						<a href="#">了解详情</a>
+					</li>
+					<li class="column">
+						<span class="fa fa-github fa-5x"></span>
+						<p>模式描述 </p>
+						<a href="#">了解详情</a>
+					</li>
+					<li class="column">
+						<span class="fa fa-envelope fa-5x"></span>
+						<p>模式描述 </p>
+						<a href="#">了解详情</a>
+					</li>
+				</ul>
+			</div>
+		</div>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/xiangxingchen">View on GitHub</a>
+		<script type="text/javascript" src="js/index.js"></script>
+		<script type="text/javascript">
+			$(function() {
+				Section2.init($('.section2'));
+				Section3.init($('.section3'));
+			});
+		</script>
+	</body>
 
-          <h1 id="project_title">Xiangxingchen.GitHub.io</h1>
-          <h2 id="project_tagline">CHEN XIANG</h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a id="xiangxingchengithubio" class="anchor" href="#xiangxingchengithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>xiangxingchen.github.io</h1>
-
-<p>CHEN XIANG</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
 </html>
