--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 				<div class="top-nav">
 					<ul>
 						<li><a href="#page1">Home</a></li>
-						<li><a href="#page2">Team</a></li>
-						<li><a href="#page3">Contact</a></li>
-						<li><a href="#page4">Ability</a></li>
+						<li><a href="#page2">Skill</a></li>
+						<li><a href="#page3">Project</a></li>
+						<li><a href="#page4">Contact</a></li>
 					</ul>
 				</div>
 				<div class="top-name">
@@ -58,7 +58,7 @@
 								<p>description</p>
 							</div>
 						</a>
-						<a href="#">
+						<a href="http://xiangxingchen.github.io/Carousel/">
 							<div class="skill-item">
 								<img src="images/5.jpg" />
 								<h2>javascript</h2>
